@@ -1,3 +1,9 @@
+2009-03-05  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/common/blinds.c: use enum GimpOrientationType instead
+	of local #defines for HORIZONTAL and VERTICAL with identical
+	values. Some indentation and formatting fixups.
+
 2009-03-05  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpviewrendererimagefile.c
